--- a/一些常用的套路.md
+++ b/一些常用的套路.md
@@ -1,20 +1,19 @@
-## 客户端连接数据库
+# 客户端连接数据库
 
-1. **遵守JDBC**(支持SQL),按照JDBC的套路区连接数据库
+## 遵守JDBC(支持SQL)
 
-1. 1. 获取Connection
-   2. 准备sql，使用Connection预编译sql，获取PreparedStatement
+**按照JDBC的套路连接数据库**
 
-1. 1. 1. 准备四个参数(不需要的可以不写)：
-
-1. 1. 1. 1. url
-         2. driver(省略，根据url自动加载驱动)
-         3. user
-         4. password
-
-1. 1. 还可能会向预编译以后的sql中添加占位符参数
-   2. 执行sql
-   3. 如果是查询，遍历返回值
+> 1. 获取Connection
+>    准备四个参数(不需要的可以不写)：
+>    1. url
+>    2. driver(省略，根据url自动加载驱动)
+>    3. user
+>    4. password
+> 2. 准备sql，使用Connection预编译sql，获取PreparedStatement
+> 3. 还可能会向预编译以后的sql中添加占位符参数
+> 4. 执行sql
+> 5. 如果是查询，遍历返回值
 
 ```java
 public class FatClientDemo {
@@ -40,113 +39,101 @@ public class FatClientDemo {
 }
 ```
 
-1. **不遵守JDBC**(NoSQL-hbase,es,redis都不遵守JDBC)，按照一下套路：
+## 使用Druid从练级池中获取连接对象
 
-1. 1. 新建一个客户端
-   2. 可用户端与服务端建立连接
-   3. 客户端发送命令到服务端执行
-   4. 如果是读命令，接收服务端返回的结果
-   5. 关闭客户端
-
-## 构造一个对象
-
-1. **new** A()
-2. 把类的构造器私有，不允许new
-
-1. 1. **建造者模式**：A a = new A.builder().build()
-   2. **工厂模式**： A a = new  AFactory().getAInstance()
-
-## 程序的入口和核心编程API
-
-|                | 入口             | API                |
-| -------------- | ---------------- | ------------------ |
-| sparkcore      | SparkContext     | RDD                |
-| sparksql       | SparkSession     | DataFrame, DataSet |
-| sparkstreaming | StreamingContext | DStream            |
-
-DStream: 离散化流，本质上是个流，由若干个离散的批组成
-
-spark世界观：流是无限的批
-
-DStream由无限个批次组成。可以对DStream定义一套计算逻辑，这个逻辑可以对DStream产生的每个批次都进行运算
-
-
-
-## Spark编程套路
+> 1. 创建连接池对象
+> 2. 连接池的初始化
+>    1. 创建paramMap配置并赋值
+>    2. 使用Druid连接池对象
+> 3. 从连接池中获取连接对象
 
 ```scala
-package com.atguigu.spark
+```
 
-import org.apache.spark.rdd.RDD
-import org.apache.spark.{SparkConf, SparkContext}
 
-object WordCount {
 
-    def main(args: Array[String]): Unit = {
 
-        //1.创建SparkConf并设置App名称
-        val conf = new SparkConf().setAppName("WC").setMaster("local[*]")
 
-        //2.创建SparkContext，该对象是提交Spark App的入口
-        val sc = new SparkContext(conf)
 
-        //3.读取指定位置文件:hello atguigu atguigu
-        val lineRdd: RDD[String] = sc.textFile("input")
 
-        //4.读取的一行一行的数据分解成一个一个的单词（扁平化）(hello)(atguigu)(atguigu)
-        val wordRdd: RDD[String] = lineRdd.flatMap(_.split(" "))
+## 不遵守JDBC
 
-        //5. 将数据转换结构：(hello,1)(atguigu,1)(atguigu,1)
-        val wordToOneRdd: RDD[(String, Int)] = wordRdd.map((_, 1))
+> 1. 新建一个客户端
+> 2. 可用客户端与服务建立连接
+> 3. 客户端发送命令到服务端执行
+> 4. 如果是读命令，接收服务端返回的结果
+> 5. 关闭客户端
 
-        //6.将转换结构后的数据进行聚合处理 atguigu:1、1 =》1+1  (atguigu,2)
-        val wordToSumRdd: RDD[(String, Int)] = wordToOneRdd.reduceByKey(_+_)
+### 连接Redis
 
-        //7.将统计结果采集到控制台打印
-        wordToSumRdd.collect().foreach(println)
+```scala
+```
 
-        //8.关闭连接
-        sc.stop()
+
+
+
+
+# Kafka
+
+## Kafka生产者
+
+> 1. 创建kafka生产者的配置对象
+> 2. 给kafka配置对象添加配置信息
+>    1. 设置bootstrap.servers（必须）
+>    2. 设置key 和 value的序列化器（必须）
+>    3. 设置batchsize
+>    4. 设置linger.ms
+>    5. 设置RecordAccumulator缓冲区大小
+>    6. 设置compression.type压缩格式
+>    7. 设置生产者是否是一个幂等生产者
+> 3. 创建kafka生产者对象
+> 4. 调用send方法，发送消息
+> 5. 关闭资源
+
+```java
+public class CustomProducerParameters {
+    public static void main(String[] args) throws InterruptedException {
+        // 1. 创建kafka生产者的配置对象
+        Properties properties = new Properties();
+
+        // 2. 给kafka配置对象添加配置信息：bootstrap.servers
+        properties.put(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG, "hadoop102:9092");
+        
+        // key,value序列化（必须）：key.serializer，value.serializer
+        properties.put(ProducerConfig.KEY_SERIALIZER_CLASS_CONFIG, "org.apache.kafka.common.serialization.StringSerializer");
+        properties.put(ProducerConfig.VALUE_SERIALIZER_CLASS_CONFIG, "org.apache.kafka.common.serialization.StringSerializer");
+
+        // batch.size：批次大小，默认16K
+        properties.put(ProducerConfig.BATCH_SIZE_CONFIG, 16384);
+
+        // linger.ms：等待时间，默认0
+        properties.put(ProducerConfig.LINGER_MS_CONFIG, 1);
+
+        // RecordAccumulator：缓冲区大小，默认32M：buffer.memory
+        properties.put(ProducerConfig.BUFFER_MEMORY_CONFIG, 33554432);
+
+        // compression.type：压缩，默认none，可配置值gzip、snappy、lz4和zstd
+properties.put(ProducerConfig.COMPRESSION_TYPE_CONFIG,"snappy");
+
+        // 3. 创建kafka生产者对象
+        KafkaProducer<String, String> kafkaProducer = new KafkaProducer<String, String>(properties);
+
+        // 4. 调用send方法,发送消息
+        for (int i = 0; i < 5; i++) {
+            kafkaProducer.send(new ProducerRecord<>("first","atguigu" + i));
+        }
+
+        // 5. 关闭资源
+        kafkaProducer.close();
     }
 }
 ```
 
-## SparkStreaming编程套路
 
-1. 创建入口: StreamingContext
-2. 从StreamingContext中获取计算的流 DStream
 
-1. 1. 读取文件中实时写入的数据：streamingContext.textFileStream("实时监控的目录")
-   2. 读取某特TCP端口中实时发送的文本数据：streamingContext.socketTextStream()
 
-1. 调用DStream 的API，进行各种transformation
-2. 将最终的DStream进行输出
-3. 启动App
-4. 阻塞当前App，让他一直运行，直到发命令让他停止
 
-```scala
-val streamingContext = new StreamingContext("local[*]", "workCount", Seconds(5))
-val kafkaParams = Map[String, Object](
-  "bootstrap.servers" -> "hadoop102:9092",
-  "key.deserializer" -> classOf[StringDeserializer],
-  "value.deserializer" -> classOf[StringDeserializer],
-  "group.id" -> "sz220409test",
-  "auto.offset.reset" -> "latest",
-  "enable.auto.commit" -> "true"
-)
 
-val topics = Array("topicD")
-val ds: InputDStream[ConsumerRecord[String, String]] = KafkaUtils.createDirectStream[String, String](
-  streamingContext,
-  PreferConsistent,
-  Subscribe[String, String](topics, kafkaParams)
-)
 
-val ds1: DStream[(String, Int)] = ds.flatMap(record => record.value().split(" "))
-.map(word => (word, 1))
-.reduceByKey(_ + _)
 
-ds1.print(1000)
-streamingContext.start()
-streamingContext.awaitTermination()
-```
+
