--- a/一些常用的套路.md
+++ b/一些常用的套路.md
@@ -154,7 +154,29 @@ properties.put(ProducerConfig.COMPRESSION_TYPE_CONFIG,"snappy");
 
 
 
+# Json
 
+```
+fastjson:  阿里巴巴推出
+           特点：   静态方法。
+
+           核心类：  JSON
+               {}字符串转java对象:   JSON.parseObject()
+                       返回值:  JSONObject(Map)   或   T
+               []字符串转java对象:   JSON.parseArray()
+                       返回值:   JSONArray(List)   或  List[T]
+
+
+               java对象转字符串:   JSON.toJSONString()
+
+
+gson:      google推出
+          特点：   实例方法
+
+          核心类：  Gson
+
+               java对象转字符串:   Gson.toJSON()
+```
 
 
 
