--- a/Common/各种启动初始化命令.md
+++ b/Common/各种启动初始化命令.md
@@ -26,9 +26,46 @@ kafka节点启动： `/opt/module/kafka/bin/kafka-server-start.sh -daemon /opt/m
 
 kafka节点关闭：`/opt/module/kafka/bin/kafka-server-stop.sh /opt/module/kafka/config/server.properties`
 
-kafka生产者启动： `/opt/module/kafka/bin/kafka-console-producer.sh --broker-list hadoop102:9092 --topic topicA`
 
-kafka消费者启动：``
+
+主题命令行操作：
+
+```shell
+#查看当前服务器中的所有topic
+bin/kafka-topics.sh --bootstrap-server hadoop102:9092 --list
+
+#创建一个主题名为first的topic
+bin/kafka-topics.sh --bootstrap-server hadoop102:9092 --create --replication-factor 3 --partitions 1 --topic first
+
+#查看Topic的详情
+bin/kafka-topics.sh --bootstrap-server hadoop102:9092 --describe --topic first
+
+#修改分区数（注意：分区数只能增加，不能减少）
+bin/kafka-topics.sh --bootstrap-server hadoop102:9092 --alter --topic first --partitions 3
+
+#删除topic
+bin/kafka-topics.sh --bootstrap-server hadoop102:9092 --delete --topic first
+```
+
+生产者命令行操作：
+
+```shell
+#生产消息
+bin/kafka-console-producer.sh --broker-list hadoop102:9092 --topic first
+bin/kafka-console-producer.sh --topic atguigu --bootstrap-server  hadoop102:9092 
+```
+
+消费者命令行操作：
+
+```shell
+#消费消息
+bin/kafka-console-consumer.sh --bootstrap-server hadoop102:9092 --topic first
+
+#从头消费
+bin/kafka-console-consumer.sh --bootstrap-server hadoop102:9092 --from-beginning --topic first
+```
+
+
 
 
 
@@ -114,10 +151,61 @@ redis客户端关闭：`quit`
 
 elasticsearch单点启动:  `/opt/module/elasticsearch/bin/elasticsearch`
 
-elasticsearch单点关闭:  `ps -ef | grep Elasticsearch | grep -v grep | awk  '{print \$2}' | xargs kill `
+elasticsearch单点关闭:  `ps -ef | grep Elasticsearch | grep -v grep | awk  "{print \$2}" | xargs kill `
 
 
 
 ## kibana
 
 elasticsearch客户端启动:  `/opt/module/kibana/bin/kibana`
+
+
+
+## canal
+
+canal服务启动：`/opt/module/canal/bin/startup.sh`
+
+canal服务停止：`/opt/module/canal/bin/stop.sh`
+
+
+
+## docker
+
+docker服务启动：`sudo systemctl start docker`
+
+查看docker服务是是否启动：`ps -ef | grep docker`
+
+
+
+
+
+## flink
+
+socket服务器开启：`nc -lk 9999 `
+
+local-cluster模式启动本地集群：`bin/start-cluster.sh `
+
+local-cluster模式关闭本地集群：`bin/stop-cluster.sh `
+
+standalone模式启动本地集群：`bin/start-cluster.sh `
+
+standalone模式关闭本地集群：`bin/stop-cluster.sh `
+
+命令行提交Flink应用：`bin/flink run -m hadoop162:8081 -c com.atguigu.flink.java.chapter_2.Flink03_WC_UnBoundedStream ./flink-prepare-1.0-SNAPSHOT.jar `
+
+yarn模式：
+
+```shell
+# yarn模式Session-Cluster模式执行无界流WordCount：
+bin/flink run -d -t yarn-per-job -c com.atguigu.flink.java.chapter_2.Flink03_WC_UnBoundedStream ./flink-prepare-1.0-SNAPSHOT.jar
+
+# yarn模式Per-Job-Cluster模式执行无界流WordCount：
+bin/flink run -d -t yarn-per-job -c com.atguigu.flink.java.chapter_2.Flink03_WC_UnBoundedStream ./flink-prepare-1.0-SNAPSHOT.jar
+
+# yarn模式Application Mode模式执行无界流WordCount：
+bin/flink run-application -t yarn-application -c com.atguigu.flink.java.chapter_2.Flink03_WC_UnBoundedStream ./flink-prepare-1.0-SNAPSHOT.jar
+```
+
+
+
+kafka消费者（不读取未提交的数据）：` bin/kafka-console-consumer.sh --bootstrap-server hadoop162:9092 --topic s2 --isolation-level read_committed`
